--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fast-compare": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.0",
