--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.0",
+    "react-virtualized": "^9.22.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
